Tidy up code. Down with StringBuffer!